--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -85,7 +85,7 @@ body.light_theme {
     --card-shadow: hsla(0, 0%, 0%, 0.1);
     --input-bg: hsl(0, 0%, 93%);
     --shadow-1: 10px 10px 40px var(--card-shadow);
-    background-image: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' version='1.1' xmlns:xlink='http://www.w3.org/1999/xlink' xmlns:svgjs='http://svgjs.dev/svgjs' width='1440' height='250' preserveAspectRatio='none' viewBox='0 0 1440 250'%3e%3cg mask='url(%26quot%3b%23SvgjsMask1030%26quot%3b)' fill='none'%3e%3crect width='1440' height='250' x='0' y='0' fill='rgba(234%2c 234%2c 234%2c 1)'%3e%3c/rect%3e%3cpath d='M15 250L265 0L592 0L342 250z' fill='url(%26quot%3b%23SvgjsLinearGradient1031%26quot%3b)'%3e%3c/path%3e%3cpath d='M281.6 250L531.6 0L800.1 0L550.1 250z' fill='url(%26quot%3b%23SvgjsLinearGradient1031%26quot%3b)'%3e%3c/path%3e%3cpath d='M499.20000000000005 250L749.2 0L828.7 0L578.7 250z' fill='url(%26quot%3b%23SvgjsLinearGradient1031%26quot%3b)'%3e%3c/path%3e%3cpath d='M759.8000000000001 250L1009.8000000000001 0L1155.3000000000002 0L905.3000000000001 250z' fill='url(%26quot%3b%23SvgjsLinearGradient1031%26quot%3b)'%3e%3c/path%3e%3cpath d='M1438 250L1188 0L868.5 0L1118.5 250z' fill='url(%26quot%3b%23SvgjsLinearGradient1032%26quot%3b)'%3e%3c/path%3e%3cpath d='M1187.4 250L937.4000000000001 0L583.4000000000001 0L833.4000000000001 250z' fill='url(%26quot%3b%23SvgjsLinearGradient1032%26quot%3b)'%3e%3c/path%3e%3cpath d='M943.8 250L693.8 0L546.8 0L796.8 250z' fill='url(%26quot%3b%23SvgjsLinearGradient1032%26quot%3b)'%3e%3c/path%3e%3cpath d='M715.1999999999999 250L465.19999999999993 0L340.69999999999993 0L590.6999999999999 250z' fill='url(%26quot%3b%23SvgjsLinearGradient1032%26quot%3b)'%3e%3c/path%3e%3cpath d='M1291.1614012255814 250L1440 101.16140122558147L1440 250z' fill='url(%26quot%3b%23SvgjsLinearGradient1031%26quot%3b)'%3e%3c/path%3e%3cpath d='M0 250L148.83859877441853 250L 0 101.16140122558147z' fill='url(%26quot%3b%23SvgjsLinearGradient1032%26quot%3b)'%3e%3c/path%3e%3c/g%3e%3cdefs%3e%3cmask id='SvgjsMask1030'%3e%3crect width='1440' height='250' fill='white'%3e%3c/rect%3e%3c/mask%3e%3clinearGradient x1='0%25' y1='100%25' x2='100%25' y2='0%25' id='SvgjsLinearGradient1031'%3e%3cstop stop-color='rgba(171%2c 171%2c 171%2c 0.95)' offset='0'%3e%3c/stop%3e%3cstop stop-opacity='0' stop-color='rgba(171%2c 171%2c 171%2c 0.95)' offset='0.66'%3e%3c/stop%3e%3c/linearGradient%3e%3clinearGradient x1='100%25' y1='100%25' x2='0%25' y2='0%25' id='SvgjsLinearGradient1032'%3e%3cstop stop-color='rgba(171%2c 171%2c 171%2c 0.95)' offset='0'%3e%3c/stop%3e%3cstop stop-opacity='0' stop-color='rgba(171%2c 171%2c 171%2c 0.95)' offset='0.66'%3e%3c/stop%3e%3c/linearGradient%3e%3c/defs%3e%3c/svg%3e");
+    background-image: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' version='1.1' xmlns:xlink='http://www.w3.org/1999/xlink' xmlns:svgjs='http://svgjs.dev/svgjs' width='1440' height='250' preserveAspectRatio='none' viewBox='0 0 1440 250'%3e%3cg mask='url(%26quot%3b%23SvgjsMask1048%26quot%3b)' fill='none'%3e%3crect width='1440' height='250' x='0' y='0' fill='rgba(243%2c 243%2c 244%2c 1)'%3e%3c/rect%3e%3cpath d='M1 250L251 0L554 0L304 250z' fill='url(%26quot%3b%23SvgjsLinearGradient1049%26quot%3b)'%3e%3c/path%3e%3cpath d='M255.60000000000002 250L505.6 0L780.1 0L530.1 250z' fill='url(%26quot%3b%23SvgjsLinearGradient1049%26quot%3b)'%3e%3c/path%3e%3cpath d='M495.20000000000005 250L745.2 0L1000.2 0L750.2 250z' fill='url(%26quot%3b%23SvgjsLinearGradient1049%26quot%3b)'%3e%3c/path%3e%3cpath d='M750.8000000000001 250L1000.8000000000001 0L1104.3000000000002 0L854.3000000000001 250z' fill='url(%26quot%3b%23SvgjsLinearGradient1049%26quot%3b)'%3e%3c/path%3e%3cpath d='M1435 250L1185 0L1098 0L1348 250z' fill='url(%26quot%3b%23SvgjsLinearGradient1050%26quot%3b)'%3e%3c/path%3e%3cpath d='M1155.4 250L905.4000000000001 0L707.4000000000001 0L957.4000000000001 250z' fill='url(%26quot%3b%23SvgjsLinearGradient1050%26quot%3b)'%3e%3c/path%3e%3cpath d='M961.8 250L711.8 0L627.8 0L877.8 250z' fill='url(%26quot%3b%23SvgjsLinearGradient1050%26quot%3b)'%3e%3c/path%3e%3cpath d='M723.1999999999999 250L473.19999999999993 0L284.19999999999993 0L534.1999999999999 250z' fill='url(%26quot%3b%23SvgjsLinearGradient1050%26quot%3b)'%3e%3c/path%3e%3cpath d='M1306.6752207579589 250L1440 116.67522075795878L1440 250z' fill='url(%26quot%3b%23SvgjsLinearGradient1049%26quot%3b)'%3e%3c/path%3e%3cpath d='M0 250L133.32477924204122 250L 0 116.67522075795878z' fill='url(%26quot%3b%23SvgjsLinearGradient1050%26quot%3b)'%3e%3c/path%3e%3c/g%3e%3cdefs%3e%3cmask id='SvgjsMask1048'%3e%3crect width='1440' height='250' fill='white'%3e%3c/rect%3e%3c/mask%3e%3clinearGradient x1='0%25' y1='100%25' x2='100%25' y2='0%25' id='SvgjsLinearGradient1049'%3e%3cstop stop-color='rgba(31%2c 112%2c 163%2c 0.31)' offset='0'%3e%3c/stop%3e%3cstop stop-opacity='0' stop-color='rgba(31%2c 112%2c 163%2c 0.31)' offset='0.66'%3e%3c/stop%3e%3c/linearGradient%3e%3clinearGradient x1='100%25' y1='100%25' x2='0%25' y2='0%25' id='SvgjsLinearGradient1050'%3e%3cstop stop-color='rgba(31%2c 112%2c 163%2c 0.31)' offset='0'%3e%3c/stop%3e%3cstop stop-opacity='0' stop-color='rgba(31%2c 112%2c 163%2c 0.31)' offset='0.66'%3e%3c/stop%3e%3c/linearGradient%3e%3c/defs%3e%3c/svg%3e");
 }
 
 .route {
@@ -325,23 +325,6 @@ body.active {
     height: 0px;
 }
 
-.logo {
-    position: relative;
-    min-width: 77px;
-    z-index: 2;
-}
-
-.logo a {
-    color: var(--color-primary);
-    font-family: var(--ff-saira-stencil-one);
-}
-
-.logo span {
-    display: inline-block;
-    color: var(--raw-seinna);
-    margin-left: 2px;
-}
-
 .navbar-actions {
     display: flex;
     align-items: center;
@@ -368,7 +351,7 @@ body.active {
 }
 
 .header .theme-btn {
-    background: var(--bg-primary);
+    background: var(--raw-seinna);
 }
 
 .theme-btn .icon {
@@ -383,7 +366,7 @@ body.active {
 
 .theme-btn.active .icon {
     left: 20px;
-    box-shadow: inset 20px -20px var(--sizzling-sunrise);
+    box-shadow: inset 20px -20px yellow;
 }
 
 
@@ -545,7 +528,7 @@ main {
 }
 
 .down:hover svg {
-    transform: translateX(3.2em) scale(1.5);
+    transform: translateX(3.7em) scale(1.5);
 }
 
 .down:hover span {
@@ -764,11 +747,17 @@ main {
     border-radius: var(--radius-12);
     box-shadow: var(--shadow-1);
     cursor: help;
+    transition: var(--transition-1);
 }
 
 .skill-card:hover .tooltip {
     transform: translateY(0);
     opacity: 1;
+}
+
+.skill-card:is(:hover,
+ :focus) {
+    transform: translateY(-9px);
 }
 
 
@@ -921,9 +910,9 @@ button:hover a {
     position: relative;
     background: var(--raw-seinna);
     color: white;
-    width: 40px;
-    height: 40px;
-    font-size: 20px;
+    width: 30px;
+    height: 30px;
+    font-size: 17px;
     display: grid;
     place-items: center;
     border-radius: 50%;
@@ -1518,49 +1507,132 @@ textarea.input-field {
 }
 
 .loader {
-    width: 48px;
-    height: 48px;
-    background: #353535;
-    display: block;
-    margin: 20px auto;
+    width: 130px;
+    height: 170px;
     position: relative;
-    box-sizing: border-box;
-    animation: rotationBack 1s ease-in-out infinite reverse;
+    font-family: inherit;
 }
 
-.loader::before {
-    content: '';
-    box-sizing: border-box;
-    left: 0;
-    top: 0;
-    transform: rotate(45deg);
+.loader::before,
+.loader::after {
+    content: "";
+    width: 0;
+    height: 0;
     position: absolute;
-    width: 48px;
-    height: 48px;
-    background: #2e2e2e;
-    box-shadow: 0 0 5px rgba(0, 0, 0, 0.15);
+    bottom: 30px;
+    left: 15px;
+    z-index: 1;
+    border-left: 50px solid transparent;
+    border-right: 50px solid transparent;
+    border-bottom: 20px solid #1b2a33;
+    transform: scale(0);
+    transition: all 0.2s ease;
 }
 
 .loader::after {
-    content: '';
-    box-sizing: border-box;
-    width: 32px;
-    height: 32px;
-    border-radius: 50%;
-    position: absolute;
-    left: 50%;
-    top: 50%;
-    background: rgb(0, 0, 0);
-    transform: translate(-50%, -50%);
-    box-shadow: 0 0 5px rgba(0, 0, 0, 0.15);
+    border-right: 15px solid transparent;
+    border-bottom: 20px solid #162229;
 }
 
-@keyframes rotationBack {
+.loader .getting-there {
+    width: 120%;
+    text-align: center;
+    position: absolute;
+    bottom: 0;
+    left: -7%;
+    font-size: 12px;
+    letter-spacing: 2px;
+    color: white;
+}
+
+.loader .binary {
+    width: 100%;
+    height: 140px;
+    display: block;
+    color: white;
+    position: absolute;
+    top: 0;
+    left: 15px;
+    z-index: 2;
+    overflow: hidden;
+}
+
+.loader .binary::before,
+.loader .binary::after {
+    font-family: "Lato";
+    font-size: 24px;
+    position: absolute;
+    top: 0;
+    left: 0;
+    opacity: 0;
+}
+
+.loader .binary:nth-child(1)::before {
+    content: "0";
+    animation: a 1.1s linear infinite;
+}
+
+.loader .binary:nth-child(1)::after {
+    content: "0";
+    animation: b 1.3s linear infinite;
+}
+
+.loader .binary:nth-child(2)::before {
+    content: "1";
+    animation: c 0.9s linear infinite;
+}
+
+.loader .binary:nth-child(2)::after {
+    content: "1";
+    animation: d 0.7s linear infinite;
+}
+
+.loader.JS_on::before,
+.loader.JS_on::after {
+    transform: scale(1);
+}
+
+@keyframes a {
     0% {
-        transform: rotate(0deg);
+        transform: translate(30px, 0) rotate(30deg);
+        opacity: 0;
     }
     100% {
-        transform: rotate(-360deg);
+        transform: translate(30px, 150px) rotate(-50deg);
+        opacity: 1;
+    }
+}
+
+@keyframes b {
+    0% {
+        transform: translate(50px, 0) rotate(-40deg);
+        opacity: 0;
+    }
+    100% {
+        transform: translate(40px, 150px) rotate(80deg);
+        opacity: 1;
+    }
+}
+
+@keyframes c {
+    0% {
+        transform: translate(70px, 0) rotate(10deg);
+        opacity: 0;
+    }
+    100% {
+        transform: translate(60px, 150px) rotate(70deg);
+        opacity: 1;
+    }
+}
+
+@keyframes d {
+    0% {
+        transform: translate(30px, 0) rotate(-50deg);
+        opacity: 0;
+    }
+    100% {
+        transform: translate(45px, 150px) rotate(30deg);
+        opacity: 1;
     }
 }
 
@@ -1689,5 +1761,60 @@ textarea.input-field {
     }
     .hero-banner img {
         height: auto;
+    }
+    .about .btn-group {
+        flex-direction: column;
+    }
+    .down {
+        margin-top: 5px;
+    }
+}
+
+.button {
+    position: relative;
+    border: none;
+    background: transparent;
+    --ani-color: rgba(95, 3, 244, 0);
+    --color-gar: linear-gradient(90deg, #0373f4, #6dc0ff, #0aff7c, #03a9f4);
+    letter-spacing: 3px;
+    font-size: 2em;
+    font-family: "Arial";
+    text-transform: uppercase;
+    color: transparent;
+    -webkit-text-stroke: 1px var(--color-primary);
+    cursor: pointer;
+    z-index: 2;
+}
+
+.front-text {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 0%;
+    background: var(--color-gar);
+    -webkit-background-clip: text;
+    background-clip: text;
+    background-size: 200%;
+    overflow: hidden;
+    transition: all 1s;
+    animation: 8s ani infinite;
+    border-bottom: 2px solid transparent;
+}
+
+.button:hover .front-text {
+    width: 100%;
+    border-bottom: 2px solid #03a9f4;
+    -webkit-text-stroke: 1px var(--ani-color);
+}
+
+@keyframes ani {
+    0% {
+        background-position: 0%;
+    }
+    50% {
+        background-position: 400%;
+    }
+    100% {
+        background-position: 0%;
     }
 }
