--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -760,19 +760,13 @@ main {
     transform: translateY(-9px);
 }
 
-.card-icon .next {
-    width: 70px;
-    height: 70px;
+.card-icon img {
+    width: 70px !important;
+    height: 70px !important;
 }
 
-.card-icon .node {
-    width: 70px;
-    height: 70px;
-}
-
-.card-icon .mongo {
-    width: 70px;
-    height: 35px;
+.mongo img {
+    height: 40px !important;
 }
 
 
